-fixed to salesforce text overlap bugs

--- a/source/styles/_sync.scss
+++ b/source/styles/_sync.scss
@@ -74,6 +74,7 @@
   }
   .edit {
     position: absolute;
+    width: 50px;
     right: 20px;
     top: 50%;
     transform: translateY(-50%);
@@ -130,6 +131,7 @@
     }
     .edit {
       right: 10px;
+      width: 50px;
     }
   }
 }
